--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
+    "nodemon": "^2.0.7",
+    "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-emoji": "^0.5.0",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.1",
-    "socket.io-client": "^3.0.5",
+    "react-scroll-to-bottom": "^4.1.0",
+    "socket.io-client": "^3.1.0",
     "socketio": "^1.0.0",
     "web-vitals": "^0.2.4"
   },
@@ -19,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server.js"
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "react-router-dom": "^5.2.0",
     "socket.io": "^3.0.5"
   }
 }
