--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
@@ -18,14 +18,14 @@
     "react-scroll-to-bottom": "^4.1.0",
     "socket.io-client": "^3.1.0",
     "socketio": "^1.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon server.js"
+    "server": "nodemon src/server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -46,7 +46,8 @@
     ]
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "react-router-dom": "^5.2.0",
-    "socket.io": "^3.0.5"
+    "socket.io": "^3.1.0"
   }
 }
